New files added - [SFNewElectricConnection.variables.json,SfnewElectricConnection.java,SFNewElectricConnection.js,SfnewElectricConnectionServiceImpl.java,SfnewElectricConnectionService.java,SFNewElectricConnection.css,SFNewElectricConnection.html,SfnewElectricConnectionDao.java,SfnewElectricConnectionController.java,SFNewElectricConnection] Files modified - [SFNewResidentialStructure.html,cx2_published_dataModel.json,Main.html,app.variables.json,FormTypesService.java,UsersController.java,Main.js,servicedef.xml,SFNewResidentialStructure.variables.json,DataEntry.variables.json,MunicipalitiesServiceImpl.java,MyProfile.js,pages-config.json,FormTypesServiceImpl.java,SfnewResidentialStructure.java,MyProfile.variables.json,DataEntry.html,FormTypesController.java,FormTypes.java,StatesServiceImpl.java,Users.java,UsersService.java,SFNewResidentialStructure.js,UsersServiceImpl.java,db-connection-settings.json] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/DataEntry/DataEntry.html
+++ b/src/main/webapp/pages/DataEntry/DataEntry.html
@@ -432,6 +432,9 @@
                                     <wm-gridcolumn columnwidth="6" name="gridcolumn56">
                                         <wm-form-field name="municipalities" displayname="Municipalities" show="true" primary-key="false" generator="assigned" key="municipalities" type="list" is-related="true" widget="select" placeholder="Select value" displayexpression="municipalityName"></wm-form-field>
                                     </wm-gridcolumn>
+                                    <wm-gridcolumn name="gridcolumn1" columnwidth="6">
+                                        <wm-form-field name="pageName" displayname="Page Name" show="true" primary-key="false" generator="assigned" key="pageName" type="string" widget="text" maxchars="255"></wm-form-field>
+                                    </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
                             <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button" update-mode="true"></wm-form-action>
