--- a/src/main/webapp/pages/Main/Main.html
+++ b/src/main/webapp/pages/Main/Main.html
@@ -153,7 +153,7 @@
     <wm-view class="dialog-view" name="view1">
         <wm-dialog dialogtype="design-dialog" modal="true" title="NewForm" iconclass="wi wi-edit" name="dialog1">
             <wm-dialogactions name="dialogactions1">
-                <wm-button class="btn-default" caption="Create" type="button" margin="unset 0.5em" name="buttonCreate" on-click="Variables.goToPage_SFNewResidentialStructure.invoke()"></wm-button>
+                <wm-button class="btn-default" caption="Create" type="button" margin="unset 0.5em" name="buttonCreate" on-click="buttonCreateClick($event, $scope)"></wm-button>
             </wm-dialogactions>
             <wm-composite name="composite3">
                 <wm-label class="col-md-3 control-label" name="label18" caption="Select Category"></wm-label>
