--- a/src/main/webapp/pages/SFNewResidentialStructure/SFNewResidentialStructure.html
+++ b/src/main/webapp/pages/SFNewResidentialStructure/SFNewResidentialStructure.html
@@ -4,36 +4,43 @@
     <wm-content name="content1">
         <wm-left-panel columnwidth="2" content="leftnav" name="left_panel1"></wm-left-panel>
         <wm-page-content columnwidth="10" name="page_content1">
-            <wm-liveform novalidate="false" errormessage="" title="Sfnewresidentialstructure Info" iconclass="wi wi-edit" defaultmode="Edit" dataset="bind:Variables.Cx2SfnewResidentialStructureData.dataSet" captionalign="left" captionposition="top" name="liveform1">
+            <wm-liveform novalidate="false" errormessage="" title="" iconclass="" defaultmode="Edit" dataset="bind:Variables.Cx2SfnewResidentialStructureData.dataSet" captionalign="left" captionposition="top" name="liveformSFNewResidential">
                 <wm-layoutgrid columns="1" name="layoutgrid1">
-                    <wm-gridrow name="gridrow1">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn1">
-                            <wm-form-field name="propertyOwnerName" displayname="Property Owner Name" required="false" show="true" generator="assigned" primary-key="false" key="propertyOwnerName" type="string" is-related="false" maxchars="255" pc-display="true"
-                            mobile-display="true" widget="text"></wm-form-field>
+                    <wm-gridrow name="gridrow11">
+                        <wm-gridcolumn columnwidth="12" name="gridcolumn11" horizontalalign="center">
+                            <wm-picture name="picture1" picturesource="bind:&quot;services/cx2/Municipalities/&quot;+Variables.MunicipalityObj.firstRecord.id+&quot;/content/logo&quot;" width="22em" height="20em"></wm-picture>
                         </wm-gridcolumn>
                     </wm-gridrow>
-                    <wm-gridrow name="gridrow2">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn2">
-                            <wm-form-field name="stateName" displayname="State Name" required="false" show="true" generator="assigned" primary-key="false" key="stateName" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
-                            widget="text"></wm-form-field>
+                    <wm-gridrow name="gridrow12">
+                        <wm-gridcolumn columnwidth="12" name="gridcolumn13" padding="2em unset">
+                            <wm-panel iconclass="wi wi-account-circle" name="panel1" title="Property Owner Details" badgetype="default" class="panel-info">
+                                <wm-gridrow name="gridrow1">
+                                    <wm-gridcolumn columnwidth="6" name="gridcolumn1">
+                                        <wm-form-field name="propertyOwnerName" displayname="Property Owner Name" required="false" show="true" generator="assigned" primary-key="false" key="propertyOwnerName" type="string" is-related="false" maxchars="255"
+                                        pc-display="true" mobile-display="true" widget="text"></wm-form-field>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="6" name="gridcolumn12">
+                                        <wm-form-field name="propertyOwnerPhNo" displayname="Property Owner Ph No" required="false" show="true" generator="assigned" primary-key="false" key="propertyOwnerPhNo" type="string" is-related="false" maxchars="255"
+                                        pc-display="true" mobile-display="true" widget="text"></wm-form-field>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                            </wm-panel>
                         </wm-gridcolumn>
                     </wm-gridrow>
-                    <wm-gridrow name="gridrow3">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn3">
-                            <wm-form-field name="propertyOwnerPhNo" displayname="Property Owner Ph No" required="false" show="true" generator="assigned" primary-key="false" key="propertyOwnerPhNo" type="string" is-related="false" maxchars="255" pc-display="true"
-                            mobile-display="true" widget="text"></wm-form-field>
-                        </wm-gridcolumn>
-                    </wm-gridrow>
-                    <wm-gridrow name="gridrow4">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn4">
-                            <wm-form-field name="basementSft" displayname="Basement Sft" required="false" show="true" generator="assigned" primary-key="false" key="basementSft" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
-                            widget="text"></wm-form-field>
-                        </wm-gridcolumn>
-                    </wm-gridrow>
-                    <wm-gridrow name="gridrow5">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn5">
-                            <wm-form-field name="garageSft" displayname="Garage Sft" required="false" show="true" generator="assigned" primary-key="false" key="garageSft" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
-                            widget="text"></wm-form-field>
+                    <wm-gridrow name="gridrow11_1">
+                        <wm-gridcolumn columnwidth="12" name="gridcolumn12_1">
+                            <wm-panel iconclass="wi wi-building" name="panel2" title="Building Dimensions" class="panel-info">
+                                <wm-gridrow name="gridrow4">
+                                    <wm-gridcolumn columnwidth="6" name="gridcolumn4">
+                                        <wm-form-field name="basementSft" displayname="Basement Sft" required="false" show="true" generator="assigned" primary-key="false" key="basementSft" type="string" is-related="false" maxchars="255" pc-display="true"
+                                        mobile-display="true" widget="text"></wm-form-field>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="6" name="gridcolumn13_1">
+                                        <wm-form-field name="garageSft" displayname="Garage Sft" required="false" show="true" generator="assigned" primary-key="false" key="garageSft" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
+                                        widget="text"></wm-form-field>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                            </wm-panel>
                         </wm-gridcolumn>
                     </wm-gridrow>
                     <wm-gridrow name="gridrow6">
