New files added - [] Files modified - [SFNewResidentialStructure.html] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/SFNewResidentialStructure/SFNewResidentialStructure.html
+++ b/src/main/webapp/pages/SFNewResidentialStructure/SFNewResidentialStructure.html
@@ -40,18 +40,20 @@
                                         widget="text"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
+                                <wm-gridrow name="gridrow7">
+                                    <wm-gridcolumn columnwidth="3" name="gridcolumn13_2"></wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="6" name="gridcolumn7">
+                                        <wm-form-field name="totalSft" displayname="Total Sft" required="false" show="true" generator="assigned" primary-key="false" key="totalSft" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
+                                        widget="text"></wm-form-field>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="3" name="gridcolumn14"></wm-gridcolumn>
+                                </wm-gridrow>
                             </wm-panel>
                         </wm-gridcolumn>
                     </wm-gridrow>
                     <wm-gridrow name="gridrow6">
                         <wm-gridcolumn columnwidth="12" name="gridcolumn6">
                             <wm-form-field name="sidingMaterial" displayname="Siding Material" required="false" show="true" generator="assigned" primary-key="false" key="sidingMaterial" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
-                            widget="text"></wm-form-field>
-                        </wm-gridcolumn>
-                    </wm-gridrow>
-                    <wm-gridrow name="gridrow7">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn7">
-                            <wm-form-field name="totalSft" displayname="Total Sft" required="false" show="true" generator="assigned" primary-key="false" key="totalSft" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
                             widget="text"></wm-form-field>
                         </wm-gridcolumn>
                     </wm-gridrow>
