New files added - [WorkSchedule.js,MunicipalitySettings.html,WorkSchedule.css,MunicipalitySettings.variables.json,MunicipalitySettings.css,WorkSchedule.variables.json,MunicipalitySettings.js,WorkSchedule.html,WorkSchedule,MunicipalitySettings] Files modified - [SFNewResidentialStructure.html,cx2_published_dataModel.json,QueryExecutionController.java,SfnewResidentialStructureService.java,FormStatuses.java,app.variables.json,MunicipalityUsers.variables.json,Cx2QueryExecutorServiceImpl.java,SfnewResidentialStructureController.java,servicedef.xml,ManageSubscriptions.variables.json,SFNewResidentialStructure.variables.json,cx2_query.json,Municipalities.java,DataEntry.variables.json,MunicipalitiesServiceImpl.java,SfnewResidentialStructureServiceImpl.java,pages-config.json,FormTypesServiceImpl.java,cx2-queries.hbm.xml,SfnewResidentialStructure.java,ManageMunicipalities.variables.json,DataEntry.html,Main.variables.json,MunicipalityUsers.html,StatesServiceImpl.java,ManageMunicipalities.html,MunicipalityAdministration.html,Cx2QueryExecutorService.java,UsersServiceImpl.java,DataEntry.js] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/ManageMunicipalities/ManageMunicipalities.html
+++ b/src/main/webapp/pages/ManageMunicipalities/ManageMunicipalities.html
@@ -89,7 +89,47 @@
                                             <wm-form-field name="globalEmailSig" displayname="Global Email Sig" show="true" primary-key="false" generator="assigned" key="globalEmailSig" type="string" widget="textarea" maxchars="255" placeholder="Enter value"></wm-form-field>
                                         </wm-gridcolumn>
                                         <wm-gridcolumn columnwidth="6" name="gridcolumn14">
-                                            <wm-form-field name="logo" displayname="Logo" show="true" primary-key="false" generator="assigned" key="logo" type="blob" widget="upload" maxchars="255" permitted="undefined" href="services/cx2/Municipalities/1/content/logo?0.7113844364404731"></wm-form-field>
+                                            <wm-form-field name="logo" displayname="Logo" show="true" primary-key="false" generator="assigned" key="logo" type="blob" widget="upload" maxchars="255" permitted="undefined"></wm-form-field>
+                                        </wm-gridcolumn>
+                                    </wm-gridrow>
+                                    <wm-gridrow name="gridrow1">
+                                        <wm-gridcolumn name="gridcolumn1" columnwidth="6">
+                                            <wm-form-field name="mondayYn" displayname="Monday Yn" show="true" primary-key="false" generator="assigned" key="mondayYn" type="boolean" widget="checkbox"></wm-form-field>
+                                        </wm-gridcolumn>
+                                        <wm-gridcolumn name="gridcolumn2" columnwidth="6">
+                                            <wm-form-field name="tuesdayYn" displayname="Tuesday Yn" show="true" primary-key="false" generator="assigned" key="tuesdayYn" type="boolean" widget="checkbox"></wm-form-field>
+                                        </wm-gridcolumn>
+                                    </wm-gridrow>
+                                    <wm-gridrow name="gridrow2">
+                                        <wm-gridcolumn name="gridcolumn3" columnwidth="6">
+                                            <wm-form-field name="wednesdayYn" displayname="Wednesday Yn" show="true" primary-key="false" generator="assigned" key="wednesdayYn" type="boolean" widget="checkbox"></wm-form-field>
+                                        </wm-gridcolumn>
+                                        <wm-gridcolumn name="gridcolumn4" columnwidth="6">
+                                            <wm-form-field name="thursdayYn" displayname="Thursday Yn" show="true" primary-key="false" generator="assigned" key="thursdayYn" type="boolean" widget="checkbox"></wm-form-field>
+                                        </wm-gridcolumn>
+                                    </wm-gridrow>
+                                    <wm-gridrow name="gridrow3">
+                                        <wm-gridcolumn name="gridcolumn5" columnwidth="6">
+                                            <wm-form-field name="fridayYn" displayname="Friday Yn" show="true" primary-key="false" generator="assigned" key="fridayYn" type="boolean" widget="checkbox"></wm-form-field>
+                                        </wm-gridcolumn>
+                                        <wm-gridcolumn name="gridcolumn6" columnwidth="6">
+                                            <wm-form-field name="saturdayYn" displayname="Saturday Yn" show="true" primary-key="false" generator="assigned" key="saturdayYn" type="boolean" widget="checkbox"></wm-form-field>
+                                        </wm-gridcolumn>
+                                    </wm-gridrow>
+                                    <wm-gridrow name="gridrow4">
+                                        <wm-gridcolumn name="gridcolumn7" columnwidth="6">
+                                            <wm-form-field name="sundayYn" displayname="Sunday Yn" show="true" primary-key="false" generator="assigned" key="sundayYn" type="boolean" widget="checkbox"></wm-form-field>
+                                        </wm-gridcolumn>
+                                        <wm-gridcolumn name="gridcolumn8" columnwidth="6">
+                                            <wm-form-field name="timeZone" displayname="Time Zone" show="true" primary-key="false" generator="assigned" key="timeZone" type="string" widget="text" maxchars="255"></wm-form-field>
+                                        </wm-gridcolumn>
+                                    </wm-gridrow>
+                                    <wm-gridrow name="gridrow5">
+                                        <wm-gridcolumn name="gridcolumn9" columnwidth="6">
+                                            <wm-form-field name="openTime" displayname="Open Time" show="true" primary-key="false" generator="assigned" key="openTime" type="time" widget="time"></wm-form-field>
+                                        </wm-gridcolumn>
+                                        <wm-gridcolumn name="gridcolumn10" columnwidth="6">
+                                            <wm-form-field name="closeTime" displayname="Close Time" show="true" primary-key="false" generator="assigned" key="closeTime" type="time" widget="time"></wm-form-field>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                 </wm-layoutgrid>
