--- a/src/main/webapp/pages/WorkSchedule/WorkSchedule.html
+++ b/src/main/webapp/pages/WorkSchedule/WorkSchedule.html
@@ -24,8 +24,8 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow2">
-                    <wm-gridcolumn columnwidth="12" name="gridcolumn3">
-                        <wm-panel iconclass="wi wi-account-circle" name="panel1" title="Work Schedule">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn3" padding="unset 2em">
+                        <wm-panel iconclass="wi wi-account-circle" name="panel1" title="Work Schedule" class="panel-primary">
                             <wm-layoutgrid name="layoutgrid2">
                                 <wm-gridrow name="gridrow4_1" padding="1em unset">
                                     <wm-gridcolumn columnwidth="3" name="gridcolumn5">
@@ -72,7 +72,7 @@
                                         <wm-composite name="composite14">
                                             <wm-label class="col-md-3 control-label" name="label8" caption="Open Time"></wm-label>
                                             <wm-container class="col-md-9" name="container6" horizontalalign="center">
-                                                <wm-time name="timeOpenTime" timepattern="hh:mm:ss"></wm-time>
+                                                <wm-time name="timeOpenTime" timepattern="hh:mm:ss" datavalue="bind:Variables.AdminsMunicipalities.dataSet[$i].OpenTime"></wm-time>
                                             </wm-container>
                                         </wm-composite>
                                     </wm-gridcolumn>
@@ -84,7 +84,7 @@
                                         <wm-composite name="composite15">
                                             <wm-label class="col-md-3 control-label" name="label9" caption="Close Time"></wm-label>
                                             <wm-container class="col-md-9" name="container7" horizontalalign="center">
-                                                <wm-time name="timeCloseTime" timepattern="hh:mm:ss"></wm-time>
+                                                <wm-time name="timeCloseTime" timepattern="hh:mm:ss" datavalue="bind:Variables.AdminsMunicipalities.dataSet[$i].CloseTime"></wm-time>
                                             </wm-container>
                                         </wm-composite>
                                     </wm-gridcolumn>
@@ -110,6 +110,46 @@
                                     <wm-gridcolumn columnwidth="3" name="gridcolumn23_1"></wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
+                        </wm-panel>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow10">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn24_1" padding="unset 2em">
+                        <wm-panel iconclass="wi wi-today" name="panel2" title="Manage Holidays" class="panel-primary">
+                            <wm-livegrid formlayout="dialog" name="livegrid1">
+                                <wm-grid gridfirstrowselect="true" editmode="dialog" title="Holidays List" dataset="bind:Variables.Cx2HolidaysData.dataSet" navigation="Basic" name="grid1">
+                                    <wm-grid-column binding="id" caption="Id" generator="identity" pcdisplay="true" mobiledisplay="true" type="integer" primary-key="true" readonly="true"></wm-grid-column>
+                                    <wm-grid-column binding="holiday" caption="Holiday" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string"></wm-grid-column>
+                                    <wm-grid-column binding="date" caption="Date" generator="assigned" pcdisplay="true" mobiledisplay="true" type="date"></wm-grid-column>
+                                    <wm-grid-column binding="municipalities.municipalityName" caption="Municipality Name" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" related-entity-name="Municipalities"></wm-grid-column>
+                                    <wm-grid-action key="addNewRow" display-name="New" iconclass="wi wi-plus" show="true" class="btn-primary" action="addNewRow()" position="footer" shortcutkey=""></wm-grid-action>
+                                    <wm-grid-row-action key="updaterow" display-name="" title="Edit" iconclass="wi wi-pencil" show="true" class="btn-transparent" action="editRow()"></wm-grid-row-action>
+                                    <wm-grid-row-action key="deleterow" display-name="" title="Delete" iconclass="wi wi-trash" show="true" class="btn-transparent" action="deleteRow()"></wm-grid-row-action>
+                                </wm-grid>
+                                <wm-liveform novalidate="false" errormessage="" title="Holidays Info" formlayout="dialog" iconclass="wi wi-edit" dataset="bind:Variables.Cx2HolidaysData.dataSet" captionalign="left" captionposition="top" name="liveform1">
+                                    <wm-layoutgrid columns="1" name="layoutgrid3">
+                                        <wm-gridrow name="gridrow11">
+                                            <wm-gridcolumn columnwidth="12" name="gridcolumn25_1">
+                                                <wm-form-field name="holiday" displayname="Holiday" required="false" show="true" generator="assigned" primary-key="false" key="holiday" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
+                                                widget="text"></wm-form-field>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow12">
+                                            <wm-gridcolumn columnwidth="12" name="gridcolumn26">
+                                                <wm-form-field name="date" displayname="Date" required="false" show="true" generator="assigned" primary-key="false" key="date" type="date" is-related="false" pc-display="true" mobile-display="true" widget="date"></wm-form-field>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow13">
+                                            <wm-gridcolumn columnwidth="12" name="gridcolumn27">
+                                                <wm-form-field name="municipalities" displayname="Municipalities" required="false" show="false" generator="assigned" primary-key="false" key="municipalities" type="list" is-related="true" pc-display="true" mobile-display="true"
+                                                widget="select" dataset="bind:Variables.SelectedMunicipalityObj.dataSet" datafield="All Fields" displayfield="municipalityName" defaultvalue="bind:Variables.SelectedMunicipalityObj.firstRecord"></wm-form-field>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                    </wm-layoutgrid>
+                                    <wm-form-action key="cancel" class="form-cancel btn-secondary" iconclass="wi wi-cancel" action="cancel()" display-name="Cancel" show="true" type="button" update-mode="true"></wm-form-action>
+                                    <wm-form-action key="save" class="form-save btn-success" iconclass="wi wi-save" display-name="Save" show="true" type="submit" update-mode="true"></wm-form-action>
+                                </wm-liveform>
+                            </wm-livegrid>
                         </wm-panel>
                     </wm-gridcolumn>
                 </wm-gridrow>
